# TTS

./: .gitignore  pyproject.toml  requirements.txt  test.py  trainer_test.py
TTS/tts/datasets/: dataset.py
TTS/tts/models/: base_tts.py
TTS/tts/utils/: helpers.py
run-March-16-2023_03+37PM-3eb5103d/: config.json  trainer_test.py
sound_samples/gpn/: metadata.csv
