[tool.poetry]
name = "tts"
version = "0.1.0"
description = ""
authors = ["Yuri Sim <yuriosim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = ">=1.18,<1.23"
scipy = "^1.10.1"
Cython = "0.29.28"
torch = "^1.13.1"
torchaudio = "^0.13.1"
soundfile = "^0.12.1"
librosa = "0.8.0"
numba = "0.55.2"
inflect = "5.6.0"
tqdm = "^4.65.0"
anyascii = "^0.3.1"
PyYAML = "^6.0"
fsspec = "^2023.3.0"
packaging = "^23.0"
Flask = "^2.2.3"
pysbd = "^0.3.4"
umap-learn = "0.5.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
trainer = "0.0.20"
coqpit = "^0.0.17"
tensorboard = "^2.12.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
black = "^23.1.0"
coverage = "^7.2.1"
isort = "^5.12.0"
pylint = "2.10.2"

[tool.poetry.group.korean.dependencies]
jamo = "^0.4.1"
nltk = "^3.8.1"
g2pkk = "^0.1.2"

[tool.poetry.group.german.dependencies]
gruut = {version = "2.2.3", extras = ["de"]}

[tool.poetry.group.japanese.dependencies]
unidic-lite = "1.0.8"
mecab-python3 = "1.0.5"

[tool.poetry.group.chinese.dependencies]
pypinyin = "^0.48.0"
jieba = "^0.42.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
